--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "buffer": "^6.0.3",
+    "firebase": "^10.5.2",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
